crucible-syntax/test-data/simulator-tests/mjrty.out.good
==== Begin Simulation ====
Hello!
Attempting to prove all outstanding obligations!

Proof Succeeded!
test-data/simulator-tests/mjrty.cbl:15:5: error: in main
MJRTY postcondition


==== Finish Simulation ====
==== No proof obligations ====
